course/yaml-examples/05-services-and-networking/04-service-clusterip.yaml
# ClusterIP Service (Default)
# Internal service accessible only within the cluster on port 80
#
apiVersion: v1
kind: Service
metadata:
  name: web-clusterip
spec:
  type: ClusterIP
  selector:
    app: web
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
