course/yaml-examples/05-services-and-networking/05-service-nodeport.yaml
# NodePort Service
# Exposes service on each node's IP at a static port (30000-32767)
#
apiVersion: v1
kind: Service
metadata:
  name: web-nodeport
spec:
  type: NodePort
  selector:
    app: web
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30080
    protocol: TCP
