course/yaml-examples/05-services-and-networking/06-service-loadbalancer.yaml
# LoadBalancer Service
# Creates an external load balancer (requires cloud provider support)
#
apiVersion: v1
kind: Service
metadata:
  name: web-loadbalancer
spec:
  type: LoadBalancer
  selector:
    app: web
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
